# Projects

./: README.md
Cub3D/: Makefile  atoi_mod.c  bmp.c  config_parser.c  cub3d  cub3d.c  cub3d.h  cubutils.c  directions.c  errors.h  file_ops.c  get_next_line.c  keys.c  libutils.c  loop_movement.c  map_parser.c  map_verification.c  mlx_utils.c  numerals.c  parser_general.c  parser_utils.c  player_utils.c  raycaster.c  rc_utils.c  rc_utils_two.c  spr_utils.c  sprites.c
Get_next_line/: file  get_next_line.c  get_next_line.h  get_next_line_utils.c  selftest.c
Inception/: Makefile  backup.sh  connect-adminer.sh  connect-docsite.sh  connect-ftp.sh  connect-mysql.sh  connect-nginx.sh  connect-redis.sh  connect-wp.sh  force-stop.sh  login_db.sh  reload.sh  restore.sh  sphinx-re.sh
Libasm/: Makefile  file1  ft_read.s  ft_strcmp.s  ft_strcpy.s  ft_strdup.s  ft_strlen.s  ft_write.s  main.c  test
Libft/: Makefile  ft_atoi.c  ft_bzero.c  ft_calloc.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_itoa.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memmove.c  ft_memset.c  ft_putchar_fd.c  ft_putendl_fd.c  (+18 more)
Minishell/: CMakeLists.txt  Makefile  cd.c  cmd_parser.c  darray_utils.c  echo.c  echo_utils.c  entrypoints.c  env.c  env_vars.c  execution.c  export.c  export_utils.c  ft_split.c  ft_split2.c  keyv_utils.c  libutils.c  libutils2.c  list_utils.c  main.c  parser_utils.c  parser_utils2.c  parser_utils3.c  pipe_utils.c  pwd_unset.c  redir_utils.c  redir_utils2.c  redir_utils3.c  redirects.c  signals.c
Minishell/includes/: minishell.h
(+270 files in other folders)
